# core

./: CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst
src/Core/: CMakeLists.txt  Files.cmake  config.cmake.in
src/Core/Core/: DerivedModule.h  Exceptions.h  ExportControl.h  Log.h  Module.h  ModuleManager.cpp  ModuleManager.h
src/Core/Core/BaseClasses/: ObjectWithLog.h  ObjectWithStructure.h  StateHandableObject.h
src/Core/Core/Impl/: ModuleManager.h
src/Core/Core/Interfaces/: Calculator.h  CalculatorWithReference.h  EmbeddingCalculator.h  MMParametrizer.h  ObjectWithOrbitals.h  WavefunctionOutputGenerator.h
src/Core/Tests/: CMakeLists.txt  CoreTests.cpp  DummyInterface.h  DummyModels.cpp  DummyModels.h  Log.cpp  SampleModule.cpp  SampleModule.h
